--- a/utama.html
+++ b/utama.html
@@ -42,6 +42,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent" >
           <ul class="navbar-nav ml-auto ">
             <li class="nav-item">
+              <a class="nav-link active" href="artikel.html">Artikel</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link active" href="#about">Tentang Kami</a>
             </li>
             <li class="nav-item">
@@ -128,7 +131,7 @@
       <div class="card">
         <img src="bur1.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
         <div class="card-body">
-          <h5 class="card-title">Beef Burger</h5>
+          <a class="nav-link" aria-current="page" href="artikel.html#Product1">Beef Burger</a>
         </div>
       </div>
     </div>
@@ -136,7 +139,7 @@
       <div class="card">
         <img src="ice.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
         <div class="card-body">
-          <h5 class="card-title">Lychee Tea</h5>
+          <a class="nav-link" aria-current="page" href="artikel.html#Product2">Lychee Tea</a>
         </div>
       </div>
     </div>
@@ -144,7 +147,7 @@
       <div class="card">
         <img src="bur3.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
         <div class="card-body">
-          <h5 class="card-title">Beef n Cheese Burger</h5>
+          <a class="nav-link" aria-current="page" href="artikel.html#Product3">Beef n Cheese Burger</a>
         </div>
       </div>
     </div>
@@ -152,7 +155,7 @@
         <div class="card">
           <img src="sandwich 2.png" class="d-center w-100" alt="..." width="400px" height="400px">
           <div class="card-body">
-            <h5 class="card-title">Sandwich</h5>
+            <a class="nav-link" aria-current="page" href="artikel.html#Product4">Sandwich</a>
           </div>
         </div>
       </div>
@@ -162,7 +165,7 @@
       <div class="card mt-3">
         <img src="thai.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
         <div class="card-body">
-          <h5 class="card-title">Thai Tea</h5>
+          <a class="nav-link" aria-current="page" href="artikel.html#Product5">Thai Tea</a>
         </div>
       </div>
     </div>
@@ -170,7 +173,7 @@
       <div class="card mt-3">
         <img src="kentang.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
         <div class="card-body">
-          <h5 class="card-title">Kentang Goreng</h5>
+          <a class="nav-link" aria-current="page" href="artikel.html#Product6">Kentang Goreng</a>
         </div>
       </div>
     </div>
@@ -178,7 +181,7 @@
       <div class="card mt-3">
         <img src="donut.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
         <div class="card-body">
-          <h5 class="card-title">Donat Lezat</h5>
+          <a class="nav-link" aria-current="page" href="artikel.html#Product7">Donat lezat</a>
         </div>
       </div>
     </div>
@@ -186,7 +189,7 @@
         <div class="card mt-3">
           <img src="corn.jpg" class="d-center w-100" alt="..." width="400px" height="400px">
           <div class="card-body">
-            <h5 class="card-title">Corn Dog Cheese</h5>
+            <a class="nav-link" aria-current="page" href="artikel.html#Product8">Corn Dog Cheese</a>
           </div>
         </div>
       </div>
